turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:6: error: not found: value gaiche
    gaiche(90)
    ^